kubernetes/frontend/deployments.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: gitlab.praktikum-services.ru:5050/std-014-65/sausage-store/sausage-frontend:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "258Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "1"
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d
              #subPath: nginx.conf
              readOnly: true
          ports:
            - name: frontend
              containerPort: 80
      imagePullSecrets:
        - name: regcred
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
            items:
            - key: default.conf
              path: default.conf
